Fix base64.any.html test https://bugs.webkit.org/show_bug.cgi?id=211671

Patch by Rob Buis <rbuis@igalia.com> on 2020-05-10
Reviewed by Darin Adler.

LayoutTests/imported/w3c:

Update improved test expectation.

* web-platform-tests/fetch/data-urls/base64.any-expected.txt:
* web-platform-tests/fetch/data-urls/base64.any.worker-expected.txt:

Source/WebCore:

Fix base64.any.html test by extending DataURLDecoder with a
forgiving-base64 decode mode [1], as used by the Fetch
data: URL processor algorithm [2].

Behavior matches Chrome and Firefox.

[1] https://infra.spec.whatwg.org/#forgiving-base64-decode
[2] https://fetch.spec.whatwg.org/#data-url-processor

Test: imported/w3c/web-platform-tests/fetch/data-urls/base64.any.html

* loader/ResourceLoader.cpp:
(WebCore::ResourceLoader::loadDataURL):
* platform/network/DataURLDecoder.cpp:
(WebCore::DataURLDecoder::decodeBase64):
(WebCore::DataURLDecoder::decode):
* platform/network/DataURLDecoder.h:

Canonical link: https://commits.webkit.org/224614@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261468 268f45cc-cd09-0410-ab3c-d52691b4dbfc